[package]
name = "rankore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
serenity = { version = "0.11.6", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework",
    "rustls_backend",
] }
tokio = { version = "1.33.0", features = ["full"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
    "bigdecimal",
    "json",
    # "bigint",
] }
