[package]
name = "rankore"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "utils",
] }
poise = "0.6"
tokio = { version = "1.33", features = ["full"] }
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
    "bigdecimal",
    "json",
    "migrate",
] }
xlsxwriter = "0.6.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
